Fix the initialization error of keepinventory in YouerConfig